# mcp-this

./: .gitignore  Makefile  README.md  README_PRESETS.md  openapi_implementation.md  openapi_implementation_archive.md  playbook.md  pyproject.toml  testing_implementation.md
.github/workflows/: tests.yaml
example_configs/: basic.yaml  openapi_basic.yaml  openapi_example.yaml
examples/: claude_desktop_config.json  claude_desktop_config_default.json  cli.py  custom_tools.yaml  examples-default-tools.ipynb  examples-editing-tools.ipynb  examples-github-tools.ipynb  examples-passing-tools.ipynb  examples.ipynb  mcp_config_cli.json  prompts_example.yaml  tools_example.yaml  toolset_example__curl.yaml  top_level_tools_example.yaml
src/mcp_this/: __init__.py  __main__.py  mcp_server.py  openapi_implementation_support.md  openapi_tools.py  prompts.py  test_server.py  tools.py  working_server.py
src/mcp_this/configs/: default.yaml  editing.yaml  example.yaml  github.yaml
tests/: test_builtin_config_default.py  test_builtin_config_editing.py  test_builtin_config_github.py  test_command_execution_edge_cases.py  test_config_files.py  test_config_loading.py  test_default_config.py  test_main.py  test_mcp_server.py  test_openapi_comprehensive.py  test_openapi_integration.py  test_prompts.py  test_template_rendering.py  test_tool_registration.py
tests/fixtures/: test_config.yaml  test_config_with_prompts.yaml
